<resources>
    <string name="app_name">Study Tracker</string>
    <string name="settings">Settings</string>

    <!-- Title Preferences -->
    <string name="default_title">Set default title</string>

    <!-- Buttons and Alt Text -->
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="play">Play</string>
    <string name="edit">Edit</string>

    <!-- Titles, Text and Hints -->
    <string name="quick_add">Quick Add</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="time_format">Time dd:hh:mm:ss</string>
    <string name="timer_title">Timer Title</string>
    <string name="new_timer">Add Study New Timer</string>
    <string name="edit_text">Edit Text</string>
    <string name="default_time_title">Default time for new entry</string>
    <string name="default_time_value">00:00:05:00</string>
    <string name="start_time">00:00:00:00</string>
    <string name="item_title">My Study Timer</string>

    <!-- Text required in code files -->
    <string name="confirm_delete_message">Are you sure you want to delete?</string>
    <string name="success_delete_message">Successfully deleted!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="finished_timer">You finished, well done!</string>
    <string name="invalid_time_entered_title">Invalid time format entered</string>
    <string name="invalid_time_entered_message">Time has been set to a real time, please edit time to correct format.</string>
<!--    <string name="one_timer_only_title">You already have a timer playing</string>-->
<!--    <string name="one_timer_only_message">You can only have one timer going at one time!</string>-->

</resources>