<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/item_border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange_medium"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/item_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/play"
                android:src="@drawable/play_icon">
            </Button>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/start_time"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/default_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/default_time_with_value"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/quick_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/quick_add"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_minute"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/grey_light"
                android:hint="@string/hours"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/input_hour"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/grey_light"
                android:hint="@string/minutes"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center" />

            <Button
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:minHeight="48dp"
                android:text="@string/add" />
        </LinearLayout>

        <!--    Progress to goal study time-->
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="100"
            android:padding="10dp"
            android:progress="25" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>